# butterfly-http-client

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.cpp
src/: CurlClient.h  HttpClient.h  Request.h  Requestable.h
src/impl/: CurlClient.cpp  Request.cpp
